--- a/.github/workflows/onboard-employee.yml
+++ b/.github/workflows/onboard-employee.yml
@@ -17,7 +17,6 @@ jobs:
       - name: Create repository for employee
         env:
           GITHUB_TOKEN: ${{ secrets.EXTENDED_GITHUB_TOKEN }}
-          EMPLOYEE_NAME: ${{ github.event.inputs['employee-name'] }}
-        run: gh repo create renevanosnabrugge/${EMPLOYEE_NAME} --internal --confirm
+        run: gh repo create renevanosnabrugge/${{inputs.employee-name}} --internal --confirm
 
 
