--- a/.github/workflows/onboard-employee.yml
+++ b/.github/workflows/onboard-employee.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Create repository for employee
         env:
           GITHUB_TOKEN: ${{ secrets.EXTENDED_GITHUB_TOKEN }}
-        run: gh repo create renevanosnabrugge/${{inputs.employee-name}} --internal --confirm
+        run: gh repo create renevanosnabrugge/${{inputs.employee-name}} --public 
 
 
