--- a/.github/workflows/onboard-employee.yml
+++ b/.github/workflows/onboard-employee.yml
@@ -19,15 +19,25 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Get issue creator
-        id: github_handle
+        id: employee-name-output
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             console.log(`Employee to onboard :tada: ${{ github.event.issue.title }}`);
             console.log(`Label ${{github.event.issue.labels[0].name}}`);
+            if ("${{ github.event_name }}" == "issues") {
+              if (github.event.issue.labels[0].name === 'onboard') {
+                console.log(`Employee to onboard :tada: ${{ github.event.issue.title }}`);
+                return github.event.issue.user.login;
+              } else {
+                console.log('No onboarding issue found');
+                return '';
+              }
+            }
+            return "${{ github.event.inputs.employee-name }}";
 
       - name: Create repository for employee
         env:
           GITHUB_TOKEN: ${{ secrets.EXTENDED_GITHUB_TOKEN }}
-        run: gh repo create renevanosnabrugge/${{inputs.employee-name}} --public 
+        run: gh repo create renevanosnabrugge/${{ steps.employee-name-output.outputs.result }} --public 
