--- a/.github/workflows/onboard-employee.yml
+++ b/.github/workflows/onboard-employee.yml
@@ -29,7 +29,7 @@ jobs:
             if ("${{ github.event_name }}" == "issues") {
               console.log(`Workflow is triggerd by an issue `);
 
-              if (${{ github.event.issue.labels[0].name }} === 'onboard') {
+              if (${{ github.event.issue.labels[0].name }} == 'onboard') {
                 console.log(`Employee to onboard: [${{ github.event.issue.title }}]`);
                 return github.event.issue.user.login;
               } 
