--- a/.github/workflows/onboard-employee.yml
+++ b/.github/workflows/onboard-employee.yml
@@ -44,3 +44,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.EXTENDED_GITHUB_TOKEN }}
         run: gh repo create renevanosnabrugge/${{ steps.employee-name-output.outputs.result }} --public 
+
+      - name: Create Repository with Issues
+        env:
+          GITHUB_TOKEN: ${{ secrets.EXTENDED_GITHUB_TOKEN }}
+        shell: pwsh
+        run: |
+          .\create-issues.ps1 -sourceRepoName "renevanosnabrugge/onboarding-demo" -employeeName ${{ steps.employee-name-output.outputs.result }} -backofficeRepoName "renevanosnabrugge/onboarding-demo"
