--- a/.github/workflows/onboard-employee.yml
+++ b/.github/workflows/onboard-employee.yml
@@ -45,6 +45,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.EXTENDED_GITHUB_TOKEN }}
         shell: pwsh
-        working-directory: /scripts/
         run: |
-          ./create-issues.ps1 -sourceRepoName "renevanosnabrugge/onboarding-demo" -employeeName ${{ steps.employee-name-output.outputs.result }} -backofficeRepoName "renevanosnabrugge/onboarding-demo"
+          ./scripts/create-issues.ps1 -sourceRepoName "renevanosnabrugge/onboarding-demo" -employeeName ${{ steps.employee-name-output.outputs.result }} -backofficeRepoName "renevanosnabrugge/onboarding-demo"
